overlays/dev/argocd-ingressroute.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: argocd-ingressroutetls
  namespace: argocd
spec:
  entryPoints:
    - websecure
  routes:
  - match: Host(`argocd-dev.n0secure.org`)
    kind: Rule
    services:
    - name: argocd-server
      port: 80
    middlewares:
      - name: argocd-headers
